hphp/hack/test/typecheck/async_function_untyped3.php.exp
File "async_function_untyped3.php", line 11, characters 13-16:
Invalid argument (Typing[4110])
File "async_function_untyped3.php", line 3, characters 20-22:
Expected `int`
File "async_function_untyped3.php", line 5, characters 16-16:
But got `Awaitable<_>` (result of an `async` function)
File "async_function_untyped3.php", line 12, characters 10-13:
Invalid return type (Typing[4110])
File "async_function_untyped3.php", line 9, characters 18-20:
Expected `int`
File "async_function_untyped3.php", line 5, characters 16-16:
But got `Awaitable<_>` (result of an `async` function)
